test/corpus/import_statements.txt
==================
Basic import statement
==================

import "pkg:/source/utils.brs"

---

(source_file
  (import_declaration
    source: (string
      (string_content))))

==================
Import with alias
==================

import "pkg:/source/utils.brs" as Utils

---

(source_file
  (import_declaration
    source: (string
      (string_content))
    alias: (identifier)))

==================
Multiple imports
==================

import "pkg:/source/utils.brs"
import "pkg:/source/models.brs" as Models
import "pkg:/source/services.brs"

---

(source_file
  (import_declaration
    source: (string
      (string_content)))
  (import_declaration
    source: (string
      (string_content))
    alias: (identifier))
  (import_declaration
    source: (string
      (string_content))))
