test/corpus/interfaces.txt
==================
Basic interface declaration
==================

interface ILogger
    sub log(message as string)
    function getLogLevel() as string
end interface

---

(source_file
  (interface_declaration
    name: (identifier)
    body: (interface_body
      (method_signature
        name: (identifier)
        parameters: (parameter_list
          (parameter
            name: (identifier)
            type: (type_annotation
              (type_identifier)))))
      (method_signature
        name: (identifier)
        parameters: (parameter_list)
        return_type: (type_annotation
          (type_identifier))))))

==================
Interface with multiple methods
==================

interface IDataService
    function fetchData(id as integer) as object
    function saveData(data as object) as boolean
    sub deleteData(id as integer)
end interface

---

(source_file
  (interface_declaration
    name: (identifier)
    body: (interface_body
      (method_signature
        name: (identifier)
        parameters: (parameter_list
          (parameter
            name: (identifier)
            type: (type_annotation
              (type_identifier))))
        return_type: (type_annotation
          (type_identifier)))
      (method_signature
        name: (identifier)
        parameters: (parameter_list
          (parameter
            name: (identifier)
            type: (type_annotation
              (type_identifier))))
        return_type: (type_annotation
          (type_identifier)))
      (method_signature
        name: (identifier)
        parameters: (parameter_list
          (parameter
            name: (identifier)
            type: (type_annotation
              (type_identifier))))))))
