test/corpus/namespaces.txt
==================
Basic namespace declaration
==================

namespace MyApp.Utils
    class StringHelper
        function toUpper(text as string) as string
            return UCase(text)
        end function
    end class
end namespace

---

(source_file
  (namespace_declaration
    name: (namespace_name
      (identifier)
      (identifier))
    body: (namespace_body
      (class_declaration
        name: (identifier)
        body: (class_body
          (method_definition
            name: (identifier)
            parameters: (parameter_list
              (parameter
                name: (identifier)
                type: (type_annotation
                  (type_identifier))))
            return_type: (type_annotation
              (type_identifier))
            body: (statement_block
              (return_statement
                (call_expression
                  function: (identifier)
                  arguments: (arguments
                    (identifier)))))))))))

==================
Namespace with multiple classes
==================

namespace MyApp.Models
    class User
        id as integer
        name as string
    end class
    
    class Product
        id as integer
        price as float
    end class
end namespace

---

(source_file
  (namespace_declaration
    name: (namespace_name
      (identifier)
      (identifier))
    body: (namespace_body
      (class_declaration
        name: (identifier)
        body: (class_body
          (field_declaration
            name: (identifier)
            type: (type_annotation
              (type_identifier)))
          (field_declaration
            name: (identifier)
            type: (type_annotation
              (type_identifier)))))
      (class_declaration
        name: (identifier)
        body: (class_body
          (field_declaration
            name: (identifier)
            type: (type_annotation
              (type_identifier)))
          (field_declaration
            name: (identifier)
            type: (type_annotation
              (type_identifier))))))))

==================
Single level namespace
==================

namespace Utils
    function add(a as integer, b as integer) as integer
        return a + b
    end function
end namespace

---

(source_file
  (namespace_declaration
    name: (namespace_name
      (identifier))
    body: (namespace_body
      (function_declaration
        name: (identifier)
        parameters: (parameter_list
          (parameter
            name: (identifier)
            type: (type_annotation
              (type_identifier)))
          (parameter
            name: (identifier)
            type: (type_annotation
              (type_identifier))))
        return_type: (type_annotation
          (type_identifier))
        body: (statement_block
          (return_statement
            (binary_expression
              left: (identifier)
              operator: "+"
              right: (identifier))))))))
